--- a/style.css
+++ b/style.css
@@ -32,7 +32,20 @@ main{
 }
 
 .asideModif{
-    min-height: 80vh;
+    height: 80vh;
+}
+
+.asideModif .listaZonas{
+    flex-wrap: nowrap;
+    overflow-y: scroll;
+}
+
+.listaZonas li{
+    width: 90%;
+}
+
+.NameSpecie{
+    width: 80%;
 }
 
 .selectNav{
@@ -44,7 +57,7 @@ main{
 }
 
 .sect-form .textArea{
-    min-height: 200px;
+    min-height: 100px;
     resize: none;
 }
 
@@ -76,20 +89,24 @@ main{
 }
 
 .divSpecies{
-    width: 40%;
+    width: 45%;
     background-color: #212529;
     max-height: 45vh;
     overflow-y: scroll;
 }
 
 .divAnimal{
-    width: 70%;
+    width: 55%;
     background-color: #212529;
     max-height: 45vh;
 }
 
 .btnSpecies{
-    width: 90%;
+    width: 80%;
+}
+
+.addSee{
+    width: 10%;
 }
 
 .borderDivScrool{
@@ -110,4 +127,20 @@ main{
     background-color: #5A6168;
     border-radius: 5px;
     height: 50px;
+}
+
+/* Comentarios */
+
+.verComentarios{
+    min-height: 55vh;
+    background-color: #212529;
+}
+
+.verComentarios .toast{
+    --bs-toast-bg: gray;
+	--bs-toast-max-width: 100%;
+}
+
+.verComentarios .toast:not(.show) {
+    display: block;
 }
