--- a/style.css
+++ b/style.css
@@ -61,10 +61,10 @@ main{
     resize: none;
 }
 
-.sect-form .btn-close{
+/* .sect-form .btn-close{
     background-color: white;
     border: 1px solid;
-}
+} */
 
 .colorTxt{
     color: black;
@@ -158,4 +158,14 @@ main{
     width: 70%;
     resize: none;
     margin: 5px 0;
+}
+
+.divVerRespuestas{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.verComentarios .divRespuestas{
+    width: 70%;
 }
